--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 body {
-  background-image:url('img/background_light.jpg');
+  background:#c4c0bf url('../img/background_light.jpg') no-repeat;
+  background-size: 100%;
+}
+
+#container {
+  width: 960px;
+  margin-top: 0 auto;
+}
+
+footer {
+  background-color: black;
+  text-align: left;
 }
