--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,16 @@ body {
 
 body > div {
   width: 960px;
-  margin-top: 0 auto;
+  margin: auto;
+  margin-top: 20px;
 }
 
 footer {
   background-color: black;
   text-align: left;
+}
+
+div > img {
+  display: block;
+  margin: 0;
 }
