--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   background:#c4c0bf url('../img/background_light.jpg') no-repeat;
   background-size: 100%;
-  font-family: Tahoma, Geneva, sans-serif;
+  font-family: "Treubuchet MS", Helvetica, sans-serif;
 }
 
 #content_left {
@@ -17,13 +17,23 @@ background-image: linear-gradient(bottom, #ffffff 37%, #ececec 100%);
   border-bottom: 1px solid #c4c0bf;
   width: 90%;
   margin-left: 15px;
+  margin-bottom: 6px;
 
+
+}
+#content_left > article > h1 {
+  margin-top: 0px;
+}
+
+#content_left > article:nth-of-type(1) > h1 {
+  margin-top: 12px;
 }
 
 #content_right {
   width: 300px;
   background-color: #a9a9a9;
   float: left;
+  height: 786px;
 }
 
 section > article {
@@ -36,14 +46,17 @@ section > article {
 h1 {
   font-size: 35px;
   color: black;
-  font-weight: bold;
+  font-weight:normal;
   margin-bottom: 7px;
+
 }
 
 h3 {
   font-size: 20px;
-  color: #3c3c3c;
+  color: #333333;
   font-weight: normal;
+  padding-left: 15px;
+  margin-bottom: 0px;
 }
 
 h6 {
@@ -68,6 +81,9 @@ footer {
   background-color: black;
   text-align: left;
   height: 75px;
+  width: 960px;
+  float: left;
+  margin-top: 0px;
 }
 
 div > img {
@@ -99,8 +115,16 @@ body > div > section:nth-of-type(1) {
     text-align: right;
   }
 
+section > ul {
+  padding-left: 15px;
+  margin-bottom: 24px;
+  margin-top: 12px;
+}
+
   section > ul > li {
     list-style: none;
+    line-height: 36px;
+    color: #666666;
   }
 
 .clear {
