--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ background: #fff url('../img/background-inner.jpg') repeat-x;
   border-bottom: 1px solid #c4c0bf;
   width: 90%;
   margin-left: 15px;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
 
 
 }
@@ -30,7 +30,7 @@ background: #fff url('../img/background-inner.jpg') repeat-x;
   width: 300px;
   background-color: #a9a9a9;
   float: left;
-  height: 714px;
+  height: 726px;
 }
 
 section > article {
@@ -86,6 +86,12 @@ footer {
 div > img {
   display: block;
   margin: 0 0 75px 0;
+}
+
+p > a {
+  color: blue;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 section > img {
